--- a/vignettes/cmvnorm.Rnw
+++ b/vignettes/cmvnorm.Rnw
@@ -75,9 +75,9 @@
 \newcommand{\bepsilon}{\boldsymbol\epsilon}
 \newcommand{\bzero}{\mathbf 0}
 \newcommand{\mathi}{\mathrm{i}}
-\newcommand{\expect}[1]{\mathbb{E}\left[#1\right]}
-\newcommand{\norm}[2]{\mathcal{N}_n\left(#1,#2\right)}
-\newcommand{\cnorm}[2]{\mathcal{N}\mathcal{C}_n\left(#1,#2\right)}
+\newcommand{\expect}[1]{\mathbb{E}{\left[#1\right]}}
+\newcommand{\norm}[2]{\mathcal{N}_n{\left(#1,#2\right)}}
+\newcommand{\cnorm}[2]{\mathcal{N}\mathcal{C}_n{\left(#1,#2\right)}}
 \newcommand{\herm}[1]{{#1}^\ast}
 
 \SweaveOpts{}
@@ -94,12 +94,11 @@ physics~\citep{mandic2009}.  In this short paper I introduce
 \pkg{cmvnorm}, a package for investigating one commonly encountered
 complex-valued probability distribution, the complex Gaussian.
 
-
 The real multivariate Gaussian distribution is well supported
 in~\proglang{R}~\citep{rcore2014,genz2014}, having density function
 
 \begin{equation}\label{real_gaussian_PDF}
-f\left(\bx;\bm,\Sigma\right) = \frac{e^{-\frac{1}{2}\left(\bx-\bm\right)^T\Sigma^{-1}\left(\bx-\bm\right)}}{\sqrt{\left|2\pi\Sigma\right|}}\qquad\bx\in\mathbb{R}^n,
+f{\left(\bx;\bm,\Sigma\right)} = \frac{e^{-\frac{1}{2}\left(\bx-\bm\right)^T\Sigma^{-1}\left(\bx-\bm\right)}}{\sqrt{\left|2\pi\Sigma\right|}}\qquad\bx\in\mathbb{R}^n,
 \end{equation}
 where~$\left|M\right|$ denotes the determinant of matrix~$M$.  Here,
 $\bm=\expect{\bX}\in\mathbb{R}^n$ is the mean vector
@@ -110,7 +109,7 @@ to consider~$\bZ\sim\cnorm{\bm}{\Gamma}$, the complex multivariate
 Gaussian, with density function
 
 \begin{equation}\label{complex_Gaussian_PDF}
-f\left(\bz;\bm,\Gamma\right) =
+f{\left(\bz;\bm,\Gamma\right)} =
 \frac{e^{-\herm{\left(\bz-\bm\right)}\Gamma^{-1}\left(\bz-\bm\right)}}{\left|\pi\Gamma\right|}\qquad\bz\in\mathbb{C}^n
 \end{equation}
 
@@ -224,62 +223,61 @@ defined as a random
 function~$\eta\colon\mathbb{R}^p\longrightarrow\mathbb{R}$ which, for
 any set of points~$\left\{\bx_1,\ldots,\bx_n\right\}$ in its
 domain~${\mathcal D}$ the random
-vector~$\left\{\eta\left(\bx_1\right),\ldots,\eta\left(\bx_n\right)\right\}$
+vector~$\left\{\eta{\left(\bx_1\right)},\ldots,\eta{\left(\bx_n\right)}\right\}$
 is multivariate Gaussian.
 
 It is convenient to specify
-$\expect{\left.\eta\left(\bx\right)\right|\bbeta}=h\left(\bx\right)\bbeta$,
+$\expect{\left.\eta{\left(\bx\right)}\right|\bbeta}=h{\left(\bx\right)}\bbeta$,
 that is, the expectation of the process at point~$\bx\in{\mathcal D}$
 conditional on the (unknown) vector of coefficients~$\bbeta$.
 Here~$h\colon\mathbb{R}^p\longrightarrow\mathbb{R}^q$ specifies
 the~$q$ known regressor functions
 of~$\bx=\left(x_1,\ldots,x_p\right)^T$; a common choice
-is~$h\left(\bx\right)=\left(1,x_1,\ldots,x_p\right)^T$
+is~$h{\left(\bx\right)}=\left(1,x_1,\ldots,x_p\right)^T$
 [giving~$q=p+1$], but one is in principle free to choose any function
 of~$\bx$.  One
-writes~$H^T=\left(h\left(\bx_1\right),\ldots,h\left(\bx_n\right)\right)$
+writes~$H^T=\left(h{\left(\bx_1\right)},\ldots,h{\left(\bx_n\right)}\right)$
 when considering the entire design matrix~$X$; the \proglang{R} idiom
 is \code{regressor.multi()}.
 
 The covariance is typically given by
 
 \[
-\COV\left(\eta(\bx),\eta(\bx')\right)=V\left(\bx-\bx'\right)
+\COV{\left(\eta(\bx),\eta(\bx')\right)=V{\left(\bx-\bx'\right)}}
 \]
 
 where~$V\colon\mathbb{R}^n\longrightarrow\mathbb{R}$ must be chosen so
 that the variance matrix of any finite set of observations is always
 positive-definite.  Bochner's theorem~\cite[chapter XIX]{feller1971}
-shows that~$V\left(\cdot\right)$ must be proportional to the
+shows that~$V{\left(\cdot\right)}$ must be proportional to the
 characteristic function (CF) of a symmetric probability Borel measure.
 
-
 \cite{oakley1999} uses techniques which have clear complex analogues
-to show that the posterior mean of~$\eta\left(\bx\right)$ is given by
+to show that the posterior mean of~$\eta{\left(\bx\right)}$ is given by
 
 \begin{equation}\label{emulator}
-h\left(\bx\right)^T\bbeta +
-\left(\COV\left(\bx,\bx_1\right),\ldots,\COV\left(\bx,\bx_n\right)\right)^TA^{-1}\left(\by-H\hat{\bbeta}\right)
+h{\left(\bx\right)}^T\bbeta +
+\left(\COV{\left(\bx,\bx_1\right)},\ldots,\COV{\left(\bx,\bx_n\right)}\right)^TA^{-1}\left(\by-H\hat{\bbeta}\right)
 \end{equation}
 
 Here~$A$ is an~$n\times n$ matrix of correlations between the
 observations,
-$\sigma^2A_{ij}=\COV\left(\eta\left(\bx_i\right),\eta\left(\bx_j\right)\right)$
+$\sigma^2A_{ij}=\COV{\left(\eta{\left(\bx_i\right)},\eta{\left(\bx_j\right)}\right)}$
 where~$\sigma^2$ is an overall variance term;
 and~$\hat{\bbeta}=\left(X^TA^{-1} X\right)^{-1}X^TA^{-1}\by$ is the
 maximum likelihood estimator for~$\bbeta$.
 
 Equation~(\ref{emulator}) furnishes a cheap approximation
-to~$\eta\left(\bx\right)$ and is known as the `emulator'.
+to~$\eta{\left(\bx\right)}$ and is known as the `emulator'.
 
 \subsection{Complex Gaussian processes}
 
 The complex case is directly analogous,
 with~$\eta\colon\mathbb{C}^p\longrightarrow\mathbb{C}$
 and~$\bbeta\in\mathbb{C}^q$.
-Writing~$\COV\left(\eta\left(\bz_1\right),\ldots,\eta\left(\bz_n\right)\right)=\Omega$,
+Writing~$\COV{\left(\eta{\left(\bz_1\right)},\ldots,\eta{\left(\bz_n\right)}\right)}=\Omega$,
 so that element $(i,j)$ of matrix~$\Omega$
-is~$\COV\left(\eta\left(\bz_i\right),\eta\left(\bz_j\right)\right)$,
+is~$\COV{\left(\eta{\left(\bz_i\right)},\eta{\left(\bz_j\right)}\right)}$,
 we may relax the requirement that~$\Omega$ be symmetric positive
 definite to requiring only Hermitian positive definiteness.  This
 allows one to use the characteristic function of {\em any}, possibly
@@ -290,8 +288,8 @@ characteristic function~$\phi$:
 
 \begin{equation}
   \Omega_{ij}=
-  \COV\left(\eta\left(\bz_i\right),\eta\left(\bz_j\right)\right) = 
-  \phi\left(\bz_i-\bz_j\right).
+  \COV{\left(\eta{\left(\bz_i\right)},\eta{\left(\bz_j\right)}\right)} = 
+  \phi{\left(\bz_i-\bz_j\right)}.
 \end{equation}
 
 That~$\Omega$ remains Hermitian positive definite may be shown by
@@ -312,12 +310,12 @@ and establishing that it is real and non-negative:
    \int_{\bt\in\mathbb{C}^n}\left[\sum_{i,j}\overline{\bw_i}e^{\mathi\operatorname{Re}\herm{\bt}(\bz_i-\bz_j)}{\bw_j}f\left(\bt\right)\right]\,d\bt
    & \mbox{\small integration and summation commute}\\
 &=
-   \int_{\bt\in\mathbb{C}^n}\left[\sum_{i,j}\overline{\bw_i}e^{\mathi\operatorname{Re}(\herm{\bt}\bz_i)}\overline{\overline{\bw_j}e^{\mathi\operatorname{Re}(\herm{\bt}\bz_j)}}f\left(\bt\right)\right]\,d\bt&\mbox{\small
+   \int_{\bt\in\mathbb{C}^n}\left[\sum_{i,j}\overline{\bw_i}e^{\mathi\operatorname{Re}(\herm{\bt}\bz_i)}\overline{\overline{\bw_j}e^{\mathi\operatorname{Re}(\herm{\bt}\bz_j)}}f{\left(\bt\right)}\right]\,d\bt&\mbox{\small
      expand
      and rearrange}\\
 &=
    \int_{\bt\in\mathbb{C}^n}\left|\sum_{i}\overline{\bw_i}e^{\mathi\operatorname{Re}(\herm{\bt}\bz_i)}\right|^2
-   f\left(\bt\right)\,d\bt&\mbox{\small algebra}\\
+   f{\left(\bt\right)}\,d\bt&\mbox{\small algebra}\\
 &\geqslant 0. &\mbox{\small integral of sum of real positive functions}
 \end{align*}
 
@@ -344,14 +342,14 @@ can write the variance matrix as a product of a (real)
 scalar~$\sigma^2$ term and
 
 \begin{equation}\label{ct}
-c\left(\bt\right) = \exp\left(i\operatorname{Re}\left(\herm{\bt}\bm\right) -
+c{\left(\bt\right)} = \exp\left(i\operatorname{Re}\left(\herm{\bt}\bm\right) -
 \herm{\bt}\mathfrak{B}\bt\right).
 \end{equation}
 
 Thus the covariance matrix~$\Omega$ is given by
 
 \begin{equation}
-  \Omega_{ij}=\COV\left(\eta\left(\bz_i\right),\eta\left(\bz_j\right)\right)=
+  \Omega_{ij}=\COV{\left(\eta{\left(\bz_i\right)},\eta{\left(\bz_j\right)}\right)}=
   \sigma^2c\left(\bz_i-\bz_j\right).
   \end{equation}
   
@@ -359,7 +357,7 @@ Thus the covariance matrix~$\Omega$ is given by
 
 In~(\ref{ct}), $\mathfrak{B}$ has the same meaning as in
 conventional emulator techniques and controls the modulus of the
-covariance between~$\eta\left(\bz\right)$ and~$\eta\left(\bz'\right)$;
+covariance between~$\eta{\left(\bz\right)}$ and~$\eta{\left(\bz'\right)}$;
 $\bm$ governs the phase.
 
 Given the above, it seems to be reasonable to follow~\cite{oakley1999}
@@ -375,7 +373,7 @@ Analytic functions of several complex variables are an important and
 interesting class of objects; \cite{krantz1987} motivates and
 discusses the discipline.  Formally,
 consider~$f\colon\mathbb{C}^n\longrightarrow\mathbb{C}$, $n\geqslant
-2$ and write~$f\left(z_1,\ldots,z_n\right)$.  Function~$f$ is {\em
+2$ and write~$f{\left(z_1,\ldots,z_n\right)}$.  Function~$f$ is {\em
   analytic} if it satisfies the Cauchy-Riemann conditions in each
 variable separately, that is~$\partial f/\partial\overline{z}_j=0$,
 $1\leqslant j\leqslant n$.
@@ -503,7 +501,7 @@ head(valsigma)
 @
 
 (an offset is needed
-because~$\sigma\left(z,g_1,g_2\right)=z+\operatorname{\mathcal{O}}\left(z^5\right)$).
+because~$\sigma{\left(z,g_1,g_2\right)}=z+\operatorname{\mathcal{O}}\left(z^5\right)$).
 The~$\sigma$-function can now be evaluated at the points on the design
 matrix:
 
