--- a/vignettes/complex_gaussian.bib
+++ b/vignettes/complex_gaussian.bib
@@ -149,7 +149,7 @@
 @Article{hankin2015,
   author = 	 {R. K. S. Hankin},
   title = 	 {The complex multivariate {G}aussian distribution},
-  journal = 	 {\proglang{R} News},
+  journal = 	 {The \proglang{R} Journal},
   year = 	 {2015},
   volume =	 {7},
   number =	 {1},
