--- a/vignettes/cmvnorm.Rnw
+++ b/vignettes/cmvnorm.Rnw
@@ -12,7 +12,7 @@
 
 
 %% just as usual
-\author{Robin K. S. Hankin\\Auckland University of Technology}
+\author{Robin K. S. Hankin\\University of Stirling}
 \title{The complex multivariate Gaussian distribution}
 %\VignetteIndexEntry{A vignette for the cmvnorm package}
 %% for pretty printing and a nice hypersummary also set:
@@ -46,8 +46,7 @@
 %% in the following format:
 \Address{
   Robin K. S. Hankin\\
-  Auckland University of Technology\\
-  Auckland NZ\\
+  University of Stirling\\
   \email{hankin.robin@gmail.com}\hfill\includegraphics[width=1in]{\Sexpr{system.file("help/figures/cmvnorm.png",package="cmvnorm")}}
 }
 %% It is also possible to add a telephone and fax number
